field error visibility bug fixed pagination style fixed

--- a/src/components/posts-list/posts-list.module.scss
+++ b/src/components/posts-list/posts-list.module.scss
@@ -30,5 +30,9 @@
 }
 
 :global(ul.ant-pagination > .ant-pagination-item-active:hover > a) {
-    color: #cfe8ff;
+    color: #FFFFFF;
+}
+
+:global(ul.ant-pagination > .ant-pagination-item-active:hover) {
+    background-color: #4faaff;
 }
